--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>TP</title>
 </head>
 
-<head>
-  <h1>
+<body>
+
+  <header>
+    <h1>TITRE<h1>
+    <h2>Baseline</h2>
+  </header>
+
+  <nav>
+    <ul id="menu">
+      <li><a href="#">Photos</a></li>
+      <li><a href="#">Carte</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
