--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/fontawesome-min.csscss/">
   <title>TP</title>
 </head>
 
@@ -22,9 +23,7 @@
   </nav>
 <main>
     <section>
-      <div class="icon1">
-        <div class="soustitre1">
-          <h3>PHOTOS</h3>
+  <i class="fas fa-address-card"></i><h3>PHOTOS</h3>
         </div>
       </div>
 
