--- a/index.html
+++ b/index.html
@@ -4,37 +4,104 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/fontawesome-min.csscss/">
+  <link rel="stylesheet" href="css/fontawesome/css/fontawesome-all.css">
   <title>TP</title>
 </head>
 
 <body>
 
-  <header>
-      <h1>TITRE<h1>
+    <header>
+      <h1>TITRE</h1>
       <h2>Baseline</h2>
-  </header>
-  <nav>
-    <ul id="menu">
-      <li><a href="#photos">Photos</a></li>
-      <li><a href="#">Carte</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
+    </header>
+
+    <nav>
+        <ul id="menu">
+            <li><a href="#photos">Photos</a></li>
+            <li><a href="#carte">Carte</a></li>
+            <li><a href="#formulaire">Contact</a></li>
+        </ul>
+    </nav>
+
 <main>
-    <section>
-  <i class="fas fa-address-card"></i><h3>PHOTOS</h3>
+
+<h3><i class="fas fa-camera"></i> Photos</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+
+
+    <div id=#image>
+        <div class="images"><img src="img/image1.jpeg" alt="image1"></div>
+        <div class="images"><img src="img/image1.jpeg" alt="image1"></div>
+        <div class="images"><img src="img/image1.jpeg" alt="image1"></div>
+        <div class="images"><img src="img/image1.jpeg" alt="image1"></div>
+        <div class="images"><img src="img/image1.jpeg" alt="image1"></div>
+        <div class="images"><img src="img/image1.jpeg" alt="image1"></div>
+    </div>
+
+    <div>
+        <div class="text"><p><strong>M. Dupond</strong></p><p>Directeur</p></div>
+        <div class="text"><p><strong>M. Dupond</strong></p><p>Directeur</p></div>
+        <div class="text"><p><strong>M. Dupond</strong></p><p>Directeur</p></div>
+        <div class="text"><p><strong>M. Dupond</strong></p><p>Directeur</p></div>
+        <div class="text"><p><strong>M. Dupond</strong></p><p>Directeur</p></div>
+        <div class="text"><p><strong>M. Dupond</strong></p><p>Directeur</p></div>
+    </div>
+
+    <div>
+        <div class="images"><img src="img/image1.jpeg" alt="image1"></div>
+        <div class="images"><img src="img/image1.jpeg" alt="image1"></div>
+        <div class="images"><img src="img/image1.jpeg" alt="image1"></div>
+        <div class="images"><img src="img/image1.jpeg" alt="image1"></div>
+    </div>
+
+    <div>
+        <div class="text"><p class="md">M. Dupond</p><p>Directeur</p></div>
+        <div class="text"><p class="md">M. Dupond</p><p>Directeur</p></div>
+        <div class="text"><p class="md">M. Dupond</p><p>Directeur</p></div>
+        <div class="text"><p class="md">M. Dupond</p><p>Directeur</p></div>
+    </div>
+
+
+
+    <h3 id="carte"><i class="fas fa-map"></i> Carte</h3>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3644.3973439880224!2d4.7184070643677245!3d49.76766938523792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47ea0e062e03d7e9%3A0xc5cc5f6ee91f2b25!2sCCI+des+Ardennes!5e0!3m2!1sfr!2sfr!4v1528042192346" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+    <h3 id="formulaire"><i class="fab fa-wpforms"></i> Formulaire</h3>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+
+    <div id="container">
+        <div>
+            <img src="img/imageform.jpg" alt="terre" width="300px" class="terre">
+       </div>
+
+    <div class="form" action="#">
+    <form target="#">
+        <fieldset><i class="fas fa-portrait fa-2x"></i><input type="text" placeholder="  Full name"></fieldset>
+        <fieldset><i class="far fa-envelope fa-2x"></i>  <input type="email" placeholder="exemple@test.com"></fieldset>
+        <fieldset><i class="fas fa-phone fa-2x"></i><input type="tel" placeholder="00 00 00 00 00"></fieldset>
+        <fieldset><i class="far fa-comment fa-2x"></i><textarea cols="30" rows="5">commentaire</textarea></fieldset>
+        <input type="submit" value="envoyer">
+        </form>
+    </div>
+  </div>
+
+
+
+      <footer>
+          <div id="container2">
+
+            <div class="rs"><i class="fab fa-facebook-square"></i></div>
+            <div class="rs"><i class="fab fa-twitter-square"></i></div>
+            <div class="rs"><i class="fab fa-instagram"></i></div>
+            <div class="rs"><i class="fab fa-youtube"></i></div>
         </div>
-      </div>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-<div id="bloc_photos1">
-  <div ><img src="img/image1.jpeg" class="photo" ></div>
-  <div ><img src="img/image2.jpeg" class="photo"></div>
-  <div ><img src="img/image3.jpeg" class="photo"></div>
-  <div><img src="img/image4.jpeg" class="photo"></div>
-  <div><img src="img/image5.jpeg"class="photo"></div>
-  <div><img src="img/image6.jpg" class="photo"></div>
-
-</section>
+    </footer>
+    </main>
+    </body>
+</html>
